1. allow for csv exports. if < 1000 rows, export the string directly from analysis data. 2. if >= 1000 rows, try and find the feather file, else re run the step and return csv string. 3. remove auto focus from tool inputs to prevent cursor jumping to first input. massive facepalm from my end.

--- a/styles/doc-styles.scss
+++ b/styles/doc-styles.scss
@@ -24,7 +24,7 @@
 
   > div:not(.nav-spacer) {
     margin: 0 2px;
-    padding: 7px 10px;
+    padding: 0.5em 0.4em;
     cursor: pointer;
     user-select: none;
     &:hover {
@@ -32,8 +32,11 @@
     }
   }
 
-  #nav-new-doc {
-    padding: 0.5em 0.4em;
+  #nav-new-doc,
+  #nav-delete-doc {
+    div {
+      display: inline-block;
+    }
     svg {
       position: relative;
       margin-left: 5px;
